# bwpy

./: Makefile  README.md  bwcli_wrapper.py  pyproject.toml  setup.py
bwpy/: __main__.py  bitwarden_collection.py  bitwarden_item.py  bitwarden_org.py  bwpy.py  cli.py
bwpy/bitwarden/: collection.py  item.py  org.py
